--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ input{
 label{
     border: none;
 }
-.inp{
+#inputs{
     flex:2 1 200px;
     display: flex;
     flex-direction: column;
@@ -59,6 +59,3 @@ button{
     margin: 20px;
     color: cadetblue;
 }
-
-
-
